--- a/java.html
+++ b/java.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <script>
-    id = prompt('아이디를 입력해주세요.');//prompt 사용자한테 정보를 입력받음
+    id = prompt('아이디.');//prompt 사용자한테 정보를 입력받음
         if(id=='123'){
-            password = prompt('비밀번호를 입력해주세요.');
+            password = prompt('비밀번호.');
             if(password==='111111'){
                 alert('인증 했습니다.');
             } else {
-                alert('인증에 실패 했습니다.');
+                alert('인증실패 했습니다.');
             }
         } else {
-            alert('인증에 실패 했습니다.');
+            alert('인증실패 했습니다.');
         }
 
 
